--- a/ocw.html
+++ b/ocw.html
@@ -16,7 +16,10 @@
         <p>This is CS50’s introduction to technology for students who don’t (yet!) consider themselves computer persons.</p>
          <h4><a href="https://cs50.harvard.edu/business">CS50B</a> - CS50's Computer Science for Business Professionals</h4>
         <p>This is CS50’s introduction to computer science for business professionals, designed for managers, product managers, founders, and decision-makers more generally.</p>
-      <h4><a href="https://cs50.harvard.edu/x/2020/">CS50x</a> - CS50's Introduction to Computer Science</h4>
+      <h4><a href="https://cs50.harvard.edu/law/">CS50L</a> - CS50's Computer Science for Lawyers</h4>
+      <p>This course is a variant of Harvard University’s introduction to computer science, CS50, designed especially for lawyers (and law students). Whereas CS50 itself takes a bottom-up approach, emphasizing mastery of low-level concepts and implementation details thereof, this course takes a top-down approach, emphasizing mastery of high-level concepts and design decisions related thereto. </p>
+          
+          <h4><a href="https://cs50.harvard.edu/x/2020/">CS50x</a> - CS50's Introduction to Computer Science</h4>
       <p>An introduction to the intellectual enterprises of computer science and the art of programming.</p>
       <h3>Intermediate</h3>
       <h4><a href="https://cs50.harvard.edu/web">CS50W</a> - CS50's Web Programming with Python and JavaScript</h4>
